--- a/app/pages/message/message.component.css
+++ b/app/pages/message/message.component.css
@@ -1,32 +1,47 @@
-.card-content {
-    padding: 15px 25px 15px 0px;
-}
 .nav-tabs a, .nav-tabs i {
     font-size: 14px;
     text-transform: none;
     font-weight: 300;
 }
+/*
 .table-enquiries {
 }
 .table-enquiries > tbody > tr {
     font-size: 16px;
 }
-.table-enquiries > tbody > tr > td:nth-child(1) {
+*/
+.table-enquiries > tbody > tr > td:first-child,
+.table-enquiries > tbody > tr > td:last-child,
+.table-enquiries > tfoot > tr > th:first-child,
+.table-enquiries > tfoot > tr > th:last-child {
     border-top: 0;
-    background-color: #fff;
     padding: 0;
     text-align: center;
+    width: 36px;
 }
 .table-enquiries > tbody > tr.unread {
     font-weight: 500;
     background-color: #e7ebed;
 }
+.table-enquiries td.button-cell{
+    padding: 0px !important;
+    width: 60px;
+    max-width: 60px;
+}
+
+/*
 .table-enquiries > tbody > tr > td {
     padding: 0 8px;
     height: 60px;
     border-top: solid 1px #a6a6a6;
     color: #3a3a3a;
 }
+*/
+/*
+.table-enquiries .photo > img {
+    width: 100%;
+}
+*/
 .table-enquiries .enquiry-status {
     font-size: 12px;
     font-weight: 300;
@@ -53,6 +68,7 @@
     margin: 0;
     min-width: 60px;
     color: #3a3a3a;
+    border-radius: 0px;
 }
 .table-enquiries button:hover {
     background-color: rgba(200, 200, 200, 0.2);
@@ -63,10 +79,7 @@
     overflow: hidden;
     border-radius: 50%;
 }
-.table-enquiries .photo > img {
-    width: 100%;
-}
-.badge {
+.table-enquiries .badge {
     width: 20px;
     height: 20px;
     background-color: #00bfa5;
@@ -74,3 +87,4 @@
     line-height: 2;
     padding: 0;
 }
+
