--- a/app/pages/properties/properties.component.html
+++ b/app/pages/properties/properties.component.html
@@ -10,70 +10,86 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
-                    <div class="card-header card-header-icon" data-background-color="blue">
-                        <i class="material-icons">store</i>
+                    <div class="row">
+                        <div class="col-xs-9">
+                            <div class="card-header card-header-icon" data-background-color="blue">
+                                <i class="material-icons">store</i>
+                            </div>
+                            <h4 class="card-title m-t-15" *ngIf="!search.value">All Properties</h4>
+                            <h4 class="card-title m-t-15" *ngIf="search.value">Properties Search Results for '{{search.value}}'</h4>
+                        </div>
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
+                            <div class="form-group label-floating m-r-25">
+                                <label class="control-label">Search</label>
+                                <input id="datatableSearch" type="text" class="form-control" #search>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-content">
-                        <h4 class="card-title" *ngIf="!search.value">All Properties</h4>
-                        <h4 class="card-title" *ngIf="search.value">Properties Search Results for '{{search.value}}'</h4>
+                    <div class="card-content p-l-r-none p-t-none">
                         <div class="material-datatables">
                             <div class="row">
-                                <div class="col-xs-offset-6 col-xs-6 col-sm-offset-6 col-sm-6 col-md-offset-6 col-md-6 col-lg-offset-9 col-lg-3">
-                                    <div class="form-group label-floating">
-                                        <label class="control-label">Search</label>
-                                        <input id="datatableSearch" type="text" class="form-control" #search>
-                                    </div>
-                                </div>
                             </div>
-                            <table id="datatables"
-                                   class="table table-striped table-no-bordered table-hover table-properties"
-                                   cellspacing="0" width="100%" style="width:100%">
+                            <table id="datatables" class="table table-properties">
                                 <thead>
-                                <tr>
-                                    <th></th>
-                                    <th></th>
-                                    <th class="disabled-sorting text-right"></th>
-                                </tr>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th class="disabled-sorting text-right"></th>
+                                        <th></th>
+                                    </tr>
                                 </thead>
                                 <tfoot>
-                                <tr>
-                                    <th></th>
-                                    <th></th>
-                                    <th class="disabled-sorting text-right"></th>
-                                </tr>
+                                    <tr>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th class="disabled-sorting text-right"></th>
+                                        <th></th>
+                                    </tr>
                                 </tfoot>
                                 <tbody id="bookingTableBody" *ngIf="!dashboardService.isReading">
-                                <tr *ngFor="let item of dashboardService.properties; let i = index; let last = last ">
-                                    <td class="thumb">
-                                        <img class="img"
-                                             src="{{ item.ImageId ? 'http://res.cloudinary.com/privadia/image/upload/c_fill,h_280,w_430/c_fill,q_80/' + item.ImageId + '.jpg' : '../assets/img/image_placeholder.jpg' }}">
-                                        <!--
-                                          <cl-image public-id="{{item.ImageId}}" cloud-name="privadia" crop="fill" quality="80" height="280" width="430" format="jpg" ></cl-image>
-                                        -->
-                                    </td>
-                                    <td>
-                                        <div class="property-name">{{item.Name}}</div>
-                                        <div class="property-id">ID {{item.Id}}</div>
-                                        <div class="property-status" *ngIf="!item.Active">Inactive</div>
-                                        <div class="property-status active" *ngIf="item.Active">Active</div>
-                                    </td>
-                                    <td class="text-right">
-                                        <button class="btn btn-simple btn-set-rates btn-icon"
-                                                [routerLink]="['/properties/setrates', item.Id]">
-                                            <i class="material-icons">attach_money</i>Set Rates
-                                        </button>
-                                        <button class="btn btn-simple btn-edit btn-icon"
-                                                [routerLink]="['/properties/editproperty', item.Id]">
-                                            <i class="material-icons">edit</i>Edit
-                                        </button>
-                                        <button class="btn btn-simple btn-delete btn-icon"
-                                                type="button"
-                                                (click)="removeProperty({index: i, propertyId: item.Id})">
-                                            <i class="material-icons">delete</i>Remove
-                                        </button>
-                                    </td>
-                                    {{ !dashboardService.isReading && last && !datatableInited ? finishReading() : "" }}
-                                </tr>
+                                    <tr *ngFor="let item of dashboardService.properties; let i = index; let last = last ">
+                                        <td></td>
+                                        <td class="thumb">
+                                            <cl-image *ngIf="item.ImageId"
+                                                      data-u="image"
+                                                      public-id="{{item.ImageId}}"
+                                                      cloud-name="privadia"
+                                                      class="md-card-image"
+                                                      crop="fill"
+                                                      gravity="auto"
+                                                      quality="80"
+                                                      height="84"
+                                                      width="84"
+                                                      format="jpg">
+                                            </cl-image>
+                                            <img *ngIf="!item.ImageId" class="img" src="../assets/img/image_placeholder.jpg">
+                                        </td>
+                                        <td>
+                                            <div class="property-name">{{item.Name}}</div>
+                                            <div class="property-id">ID {{item.Id}}</div>
+                                            <div class="property-status" *ngIf="!item.Active">Inactive</div>
+                                            <div class="property-status active" *ngIf="item.Active">Active</div>
+                                        </td>
+                                        <td class="text-right">
+                                            <button class="btn btn-simple btn-set-rates btn-icon"
+                                                    [routerLink]="['/properties/setrates', item.Id]">
+                                                <i class="material-icons">attach_money</i>Set Rates
+                                            </button>
+                                            <button class="btn btn-simple btn-edit btn-icon"
+                                                    [routerLink]="['/properties/editproperty', item.Id]">
+                                                <i class="material-icons">edit</i>Edit
+                                            </button>
+                                            <button class="btn btn-simple btn-delete btn-icon"
+                                                    type="button"
+                                                    (click)="removeProperty({index: i, propertyId: item.Id})">
+                                                <i class="material-icons">delete</i>Remove
+                                            </button>
+                                        </td>
+                                        <td></td>
+                                        {{ !dashboardService.isReading && last && !datatableInited ? finishReading() : "" }}
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
