--- a/app/components/dashboard-filter/dashboard-filter.component.html
+++ b/app/components/dashboard-filter/dashboard-filter.component.html
@@ -3,6 +3,7 @@
         <div class="card-content">
             <form [formGroup]="filterForm" (ngSubmit)="onSubmit(filterForm.value)">
                 <div class="row">
+                    <button class="btn btn-success btn-filter-search"><i class="material-icons">search</i></button>
                     <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="material-icons">euro_symbol</i></span>
@@ -82,7 +83,6 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <button class="btn btn-success">submit</button>
                     </div>
                 </div>
             </form>
