--- a/app/pages/dashboard/dashboard.component.css
+++ b/app/pages/dashboard/dashboard.component.css
@@ -3,13 +3,25 @@
 }
 .modal-header .villa-container {
     position: absolute;
+    z-index: 2;
     width: 100%;
     left:0px;
-    bottom: 10px;
+    bottom: 0px;
     padding-left: 24px;
     padding-right: 24px;
 }
+.modal-header .image-villa:after {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    top:0px;
+    left:0px;
+    bottom: 0px;
+    background-color: rgba(0,0,0,.5);
+    content: '';
+}
 .modal-header .villa-container .modal-title{
+    margin-top: 10px;
     margin-bottom: 10px;
     font-size: 24px;
     font-weight: 300;
@@ -29,7 +41,6 @@
     margin-top: 20px;
 }
 .modal-body .estimated-cost {
-    margin-top: 20px;
     margin-bottom: 10px;
     display: flex;
     flex-direction:row;
@@ -49,3 +60,27 @@
     margin-right: 20px;
 }
 
+.input-group .input-group-addon {
+    padding-top: 15px;
+    padding-left: 0px;
+}
+
+.icons-group {
+    display: flex;
+    flex-direction:row;
+    justify-content:space-between;
+    align-items:flex-start;
+    margin: auto;
+}
+.icons-group .feature {
+    margin-top: 20px;
+    padding-bottom: 10px;
+    font-size: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.icons-group .feature i {
+    padding-bottom: 2px;
+    padding-right: 15px;
+}
