--- a/app/pages/dashboard/dashboard.component.html
+++ b/app/pages/dashboard/dashboard.component.html
@@ -115,41 +115,22 @@
                         </cl-image>
                     </div>
                     <div class="villa-container">
-                        <h4 class="modal-title">Villa Name</h4>
-                        <p class="location"><i class="material-icons">place</i> San Jose</p>
+                        <h4 class="modal-title">Villa Name <span class="location"><i class="material-icons">place</i> San Jose</span></h4>
                     </div>
                 </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-xs-4">
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="material-icons">pool</i>
-                                </span>
-                                <div class="form-group form-group-static label-floating">
-                                    <span class="form-control-static">3</span>
-                                </div>
-                            </div>
+                <div class="modal-body m-t-none p-t-none">
+                    <div class="icons-group">
+                        <div class="feature">
+                            <i class="material-icons">pool</i>
+                            <span class="">3</span>
                         </div>
-                        <div class="col-xs-4">
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="material-icons">hotel</i>
-                                </span>
-                                <div class="form-group form-group-static label-floating">
-                                    <span class="form-control-static">5</span>
-                                </div>
-                            </div>
+                        <div class="feature">
+                            <i class="material-icons">hotel</i>
+                            <span class="">5</span>
                         </div>
-                        <div class="col-xs-4">
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="material-icons">group</i>
-                                </span>
-                                <div class="form-group form-group-static label-floating">
-                                    <span class="form-control-static">7</span>
-                                </div>
-                            </div>
+                        <div class="feature">
+                            <i class="material-icons">group</i>
+                            <span class="">7</span>
                         </div>
                     </div>
                     <div class="row">
@@ -161,7 +142,7 @@
                             </div>
                         </div>
                     </div>
-                    <h5 class="text-center">Create Enquiry</h5>
+                    <h5 class="text-center m-none">Create Enquiry</h5>
                     <div class="row">
                         <div class="col-xs-6">
                             <div class="input-group">
@@ -200,7 +181,7 @@
                 </div>
                 <div class="modal-footer">
                     <div class="row">
-                        <button type="button" class="btn btn-success">Submit</button>
+                        <button type="button" class="btn btn-success">Submit Booking Enquiry</button>
                     </div>
                     <div class="row">
                         <button type="button" class="btn btn-simple" data-dismiss="modal">Cancel</button>
