--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -172,6 +172,9 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .p-t-none {
 	padding-top: 0px !important;
 }
+.p-t-10 {
+	padding-top: 10px !important;
+}
 .p-b-none {
 	padding-bottom: 0px !important;
 }
@@ -496,12 +499,13 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
  */
 .modal-dialog {
 	border-radius: 10px;
-	overflow: hidden;
 	box-shadow: 0px 5px 10px 0 rgba(0, 0, 0, 0.35);
 	background-color: #fff;
 }
 .modal-dialog .modal-content .modal-header{
 	padding: 0px;
+    overflow: hidden;
+    border-radius: 6px 6px 0 0;
 }
 .modal-dialog .modal-body .material-icons{
 	font-size: 16px;
