--- a/app/shared/components/header/header.component.html
+++ b/app/shared/components/header/header.component.html
@@ -28,7 +28,7 @@
                 </li>
                 <li class="dropdown">
                     <a href="#notification" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="material-icons">notifications</i>
+                        <i class="material-icons">mail</i>
                         <span class="notification">5</span>
                         <p class="hidden-lg hidden-md">
                             Notifications
