Transitions in sidebar messages menu switch tabs

--- a/app/pages/message/message.component.html
+++ b/app/pages/message/message.component.html
@@ -4,7 +4,7 @@
             <div class="card-header card-header-tabs" data-background-color="darkblue">
                 <div class="nav-tabs-navigation">
                     <div class="nav-tabs-wrapper">
-                        <ul class="nav nav-tabs" data-tabs="tabs">
+                        <ul id="myTabs" class="nav nav-tabs" data-tabs="tabs">
                             <li class="">
                                 <a href="#notifications" data-toggle="tab">
                                     <i class="material-icons">notifications</i> Notifications
