--- a/app/shared/components/sidebar/sidebar.component.html
+++ b/app/shared/components/sidebar/sidebar.component.html
@@ -57,7 +57,7 @@
                 <div *ngIf="item.children" class="collapse" id="messageCollapse">
                     <ul class="nav">
                         <li routerlinkactive="active" *ngFor="let child of item.children">
-                            <a href="#">
+                            <a [routerLink]="['/' + item.path]" fragment="{{child.hash}}">
                                 <span class="sidebar-mini"><i class="material-icons">{{child.icon}}</i></span>
                                 <span class="sidebar-normal">{{child.title}}</span>
                             </a>
