--- a/app/pages/properties/addproperty/addproperty.component.html
+++ b/app/pages/properties/addproperty/addproperty.component.html
@@ -67,18 +67,18 @@
                         <div class="tab-content m-l-r-20-negative m-t-25">
                             <!--  Property Info  -->
                             <div id="metatab-info" class="card-content p-b-none p-l-r-none p-t-none">
-                                <propertyinfo-cmp *ngIf="isLoad"
+                                <propertyinfo-cmp *ngIf="!propertiesService.isReading"
                                                   [group]="propertyForm"
                                                   [errorForm]="errorForm"></propertyinfo-cmp>
                             </div>
                             <!--  Property Image  -->
                             <div id="metatab-images" class="card-content p-b-none p-l-r-none p-t-none">
-                                <propertyimage-cmp *ngIf="isLoad"
+                                <propertyimage-cmp *ngIf="!propertiesService.isReading"
                                                    [group]="propertyForm"></propertyimage-cmp>
                             </div>
                             <!--  Property Availability -->
                             <div id="metatab-availability" class="card-content p-b-none p-t-none">
-                                <calendar-cmp *ngIf="isLoad"
+                                <calendar-cmp *ngIf="!propertiesService.isReading"
                                               [group]="propertyForm"
                                               [errorForm]="errorForm"></calendar-cmp>
                             </div>
@@ -88,33 +88,33 @@
                             </div>
 
                             <div id="metatab-property-4" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="dashboardService.metadata[3]"
+                                <property-metafilter-cmp *ngIf="!propertiesService.isReading"
                                                          [group]="propertyForm"
-                                                         [metadata]="dashboardService.metadata[3]"></property-metafilter-cmp>
+                                                         [metadata]="propertiesService.metadata[3]"></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-3" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="dashboardService.metadata[2]"
+                                <property-metafilter-cmp *ngIf="!propertiesService.isReading"
                                                          [group]="propertyForm"
-                                                         [metadata]="dashboardService.metadata[2]"></property-metafilter-cmp>
+                                                         [metadata]="propertiesService.metadata[2]"></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-6" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="dashboardService.metadata[5]"
+                                <property-metafilter-cmp *ngIf="!propertiesService.isReading"
                                                          [group]="propertyForm"
-                                                         [metadata]="dashboardService.metadata[5]"></property-metafilter-cmp>
+                                                         [metadata]="propertiesService.metadata[5]"></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-2" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="dashboardService.metadata[1]"
+                                <property-metafilter-cmp *ngIf="!propertiesService.isReading"
                                                          [group]="propertyForm"
-                                                         [metadata]="dashboardService.metadata[1]"></property-metafilter-cmp>
+                                                         [metadata]="propertiesService.metadata[1]"></property-metafilter-cmp>
                             </div>
 
                             <div id="metatab-property-1" class="card-content p-b-none p-t-none">
-                                <property-metafilter-cmp *ngIf="dashboardService.metadata[0]"
+                                <property-metafilter-cmp *ngIf="!propertiesService.isReading"
                                                          [group]="propertyForm"
-                                                         [metadata]="dashboardService.metadata[0]"></property-metafilter-cmp>
+                                                         [metadata]="propertiesService.metadata[0]"></property-metafilter-cmp>
                             </div>
                         </div>
                     </div>
@@ -139,4 +139,9 @@
             </form>
         </div>
     </div>
+</div>
+<div class="loader" [hidden]="!propertiesService.isReading">
+    <svg class="circular" viewBox="25 25 50 50">
+        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+    </svg>
 </div>
