--- a/app/shared/components/sidebar/sidebar.component.html
+++ b/app/shared/components/sidebar/sidebar.component.html
@@ -43,8 +43,8 @@
     </div>
     <div class="nav-container">
         <ul class="nav">
-            <li routerlinkactive="active" *ngFor="let item of menuItems">
-                <a *ngIf="!item.children" [routerLink]="['/' + item.path]" (click)="menuClick()">
+            <li *ngFor="let item of menuItems" [routerLinkActive]="['active']">
+                <a *ngIf="!item.children" [routerLink]="['/' + item.path]">
                     <i class="material-icons">{{item.icon}}</i>
                     <p>{{item.title}}</p>
                 </a>
