--- a/app/pages/message/message.component.html
+++ b/app/pages/message/message.component.html
@@ -11,7 +11,7 @@
                                     <div class="ripple-container"></div>
                                 </a>
                             </li>
-                            <li class="active">
+                            <li class="">
                                 <a href="#enquiries" data-toggle="tab">
                                     <i class="material-icons">info</i> Enquiries (1)
                                     <div class="ripple-container"></div>
@@ -32,7 +32,7 @@
                     <div class="tab-pane" id="notifications">
 
                     </div>
-                    <div class="tab-pane active" id="enquiries">
+                    <div class="tab-pane" id="enquiries">
                         <div class="material-datatables">
                             <table id="datatables"
                                    class="table table-enquiries m-t-none">
